@@ -42,7 +42,6 @@ void		ECPGdebug(int, FILE *);
 bool		ECPGstatus(int, const char *);
 bool		ECPGsetcommit(int, const char *, const char *);
 bool		ECPGsetconn(int, const char *);
-bool		ECPGconnect_informix(int, const char *, const char *, const char *, const char *, int);
 bool		ECPGconnect(int, const char *, const char *, const char *, const char *, int);
 bool		ECPGdo(int, const char *, char *,...);
 bool		ECPGtrans(int, const char *, const char *);
